Fixed borders not showing

--- a/Prototypes/P1/UserInterface/css/main.css
+++ b/Prototypes/P1/UserInterface/css/main.css
@@ -58,26 +58,27 @@ nav {
   color: #116466;
 }
 
-/*TODO*/
-/*container {
-  margin: 0 auto;
-  max-width: 1280px;
-  width: 90%;
+
+.container {
+  margin: 0 auto!important;
+  max-width: 1350px!important;
+  width: 100%!important;
 }
-@media #{$medium-and-up} {
+@media only screen and (min-width : 601px) {
   .container {
-    width: 85%;
+    width: 100%!important;
   }
 }
-@media #{$large-and-up} {
+@media only screen and (min-width : 993px) {
   .container {
-    width: 70%;
+    width: 80%!important;
   }
-}*/
+}
 
 .chat-response-row {
   margin-left: 0!important;
   margin-right: 0!important;
+  margin-bottom: 0!important;
 }
 
 /*----------------------------------------------------------------------------*/
